# timofey_davidov__electronics_store

./: .coverage  .gitignore  README.md  classes.py  pyproject.toml
tests/: test_classes.py
